# isep-lapr4

./: .gitignore  LICENSE  README.md  architecture.md  build-all.bat  build-all.sh  generate-plantuml-diagrams.sh  pledge_of_honor.md  pom.xml  readme.old.md  rebuild-all.sh  run-backoffice.sh  run-bootstrap.bat  run-bootstrap.sh  run-client.bat  run-client.sh  run-coverage.bat  run-coverage.sh  run-manager.bat  run-manager.sh  run-other.sh  run-server.bat  run-server.sh  run-student.bat  run-student.sh  run-teacher.bat  run-teacher.sh  run-tests.bat  run-tests.sh  test.exam
base.app.board.client/: pom.xml
base.app.board.server/: pom.xml
base.app.board.web/: pom.xml
base.app.bootstrap/: pom.xml
base.app.manager.console/: pom.xml
base.app.student.console/: .gitignore  pom.xml
base.app.teacher.console/: pom.xml
base.bootstrappers/: pom.xml
base.core/: pom.xml
base.persistence.impl/: pom.xml
docs/: 1181478.md  1211155.md  README.md  presentation.pptx  readme.md
ecourse.util.ci/: pom.xml
jovami.application.course/: pom.xml
jovami.domain.course/: pom.xml
jovami.grammar.impl/: .gitignore  pom.xml
questions/: match1.question  match2.question  (+7 more)
shared-boards/: .clang-format  client.c  common.h  helpers.c  helpers.h  meson.build  server.c
shared-boards/.cache/clangd/index/: client.c.3B265D782DB6AC9E.idx  client.c.AD989E97168F5C4C.idx  common.h.8D0F5805338D8503.idx  common.h.BB1FB13556A0F008.idx  helpers.c.F77C218A2E77B27B.idx  helpers.h.23E24EECCC1CE1A6.idx  helpers.h.A336B13A0DF8BA4F.idx  server.c.21B06142AE1E3575.idx  server.c.62772D1F8232B491.idx
(+979 files in other folders)
